package com.wali.live.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "ExpLevelProto";

//1. 更新exp接口. cmd: zhibo.explevel.update
// 不同操作对应的type值及value值含义如下:
// type=1, 登录, value可不填 (server调用)
// type=2, 观看直播(进入房间就算), value 可不填  (server调用)
// type=3, 送礼物, value位礼物的金额 (server调用)
// type=4, 进行直播, vaue为直播时长(单位秒) (server调用)
// type=5, 发弹幕, value=1 免费弹幕, value=2 收费弹幕 (server调用)
// type=6, 分享至社交网络, value为社交网络类型 (client调用)
message UpdateExpReq
{
    required uint64 uuid = 1;
    required uint32 type = 2; //操作类型
    optional int32 value = 3; // 操作附加信息
}
message UpdateExpRsp
{
    required uint32 ret = 1;
    optional string err_msg = 2;
}

//2. 获取经验值接口
//cmd: zhibo.explevel.get
message GetExpReq
{
    required uint64 uuid = 1;
}
message GetExpRsp
{
     required uint32 exp = 1; //经验值
     required uint32 level = 2; //当前等级
     required uint32 next_level_exp = 3; //距离下一等级经验值, 如果为0表示已是最高等级
     required uint32 ret = 4;
     optional string err_msg = 5;
     optional uint32 level_interval = 6; //当前等级和下一等奖的经验值差
}